'modelizing' incoming date via adapter pattern

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^7.0.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -23,7 +24,7 @@
     "angularfire2": "^5.1.1",
     "bootstrap": "^4.2.1",
     "bootswatch": "^4.2.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "firebase": "^5.7.3",
     "ngx-infinite-scroll": "^7.0.1",
